# network-techs

./: build.gradle.kts  readme.md  settings.gradle.kts
icmp/: build.gradle.kts  readme.md
icmp-c/: .gitignore  CMakeLists.txt  main.cpp  readme.md
icmp-c/icmp-lib/: CMakeLists.txt  icmp-linux.cpp  icmp-win.cpp
icmp-c/icmp-lib/include/: icmp-win.h
icmp/src/main/kotlin/edu/sokolov/icmp/: main.kt
proxy/: build.gradle.kts  readme.md
proxy/src/main/kotlin/edu/sokolov/proxy/: ProxyServer.kt  main.kt
smtp-client/: build.gradle.kts  readme.md
smtp-client/src/main/kotlin/edu/sokolov/smtpclient/: SMTPClient.kt  SMTPMessage.kt  SMTPSslClient.kt  main.kt
udp-pinger/: build.gradle.kts  readme.md
udp-pinger/src/main/kotlin/edu/sokolov/udping/: PingClient.kt  PingServer.kt  main.kt
web-sockets/: build.gradle.kts  readme.md
web-sockets/src/main/kotlin/edu/sokolov/websock/: HttpClient.kt  HttpServer.kt  ModelType.kt  RequestException.kt  main.kt
web-sockets/src/main/resources/: goodluck.html  hello.txt
web-sockets/src/test/kotlin/edu/sokolov/websock/: HttpServerTest.kt
